// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test api routes Should return 200 and a single movie 1`] = `
{
  "data": {
    "id": 1,
    "producers": "Allan Carr",
    "studios": "Associated Film Distribution",
    "title": "Can't Stop the Music",
    "winner": 1,
    "year": 1980,
  },
  "error": null,
  "message": "Movie found",
  "success": true,
}
`;

exports[`Test api routes Should return 200 and an array of movies 1`] = `
{
  "data": [
    {
      "id": 1,
      "producers": "Allan Carr",
      "studios": "Associated Film Distribution",
      "title": "Can't Stop the Music",
      "winner": 1,
      "year": 1980,
    },
    {
      "id": 2,
      "producers": "Jerry Weintraub",
      "studios": "Lorimar Productions, United Artists",
      "title": "Cruising",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 3,
      "producers": "Steve Shagan",
      "studios": "MGM, United Artists",
      "title": "The Formula",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 4,
      "producers": "Sean S. Cunningham",
      "studios": "Paramount Pictures",
      "title": "Friday the 13th",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 5,
      "producers": "Jennings Lang",
      "studios": "Universal Studios",
      "title": "The Nude Bomb",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 6,
      "producers": "Jerry Leider",
      "studios": "Associated Film Distribution",
      "title": "The Jazz Singer",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 7,
      "producers": "William Frye",
      "studios": "Associated Film Distribution",
      "title": "Raise the Titanic",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 8,
      "producers": "Stanley Donen",
      "studios": "Associated Film Distribution",
      "title": "Saturn 3",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 9,
      "producers": "Mike Lobell",
      "studios": "United Artists",
      "title": "Windows",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 10,
      "producers": "Lawrence Gordon",
      "studios": "Universal Studios",
      "title": "Xanadu",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 11,
      "producers": "Frank Yablans",
      "studios": "Paramount Pictures",
      "title": "Mommie Dearest",
      "winner": 1,
      "year": 1981,
    },
    {
      "id": 12,
      "producers": "Dyson Lovell",
      "studios": "Universal Studios, PolyGram",
      "title": "Endless Love",
      "winner": 0,
      "year": 1981,
    },
    {
      "id": 13,
      "producers": "Joann Carelli",
      "studios": "United Artists",
      "title": "Heaven's Gate",
      "winner": 0,
      "year": 1981,
    },
    {
      "id": 14,
      "producers": "Walter Coblenz",
      "studios": "Universal Studios, Associated Film Distribution",
      "title": "The Legend of the Lone Ranger",
      "winner": 0,
      "year": 1981,
    },
    {
      "id": 15,
      "producers": "John Derek",
      "studios": "MGM, United Artists",
      "title": "Tarzan, the Ape Man",
      "winner": 0,
      "year": 1981,
    },
    {
      "id": 16,
      "producers": "Mitsuharu Ishii",
      "studios": "MGM",
      "title": "Inchon",
      "winner": 1,
      "year": 1982,
    },
    {
      "id": 17,
      "producers": "Ray Stark",
      "studios": "Columbia Pictures",
      "title": "Annie",
      "winner": 0,
      "year": 1982,
    },
    {
      "id": 18,
      "producers": "Matt Cimber",
      "studios": "Analysis Film Releasing",
      "title": "Butterfly",
      "winner": 0,
      "year": 1982,
    },
    {
      "id": 19,
      "producers": "Albert S. Ruddy",
      "studios": "20th Century Fox",
      "title": "Megaforce",
      "winner": 0,
      "year": 1982,
    },
    {
      "id": 20,
      "producers": "David Joseph",
      "studios": "20th Century Fox",
      "title": "The Pirate Movie",
      "winner": 0,
      "year": 1982,
    },
    {
      "id": 21,
      "producers": "Robert R. Weston",
      "studios": "Universal Studios",
      "title": "The Lonely Lady",
      "winner": 1,
      "year": 1983,
    },
    {
      "id": 22,
      "producers": "Yoram Globus and Menahem Golan",
      "studios": "MGM, United Artists, Cannon Films",
      "title": "Hercules",
      "winner": 0,
      "year": 1983,
    },
    {
      "id": 23,
      "producers": "Rupert Hitzig",
      "studios": "Universal Studios",
      "title": "Jaws 3-D",
      "winner": 0,
      "year": 1983,
    },
    {
      "id": 24,
      "producers": "Hank Moonjean",
      "studios": "Warner Bros., Universal Studios",
      "title": "Stroker Ace",
      "winner": 0,
      "year": 1983,
    },
    {
      "id": 25,
      "producers": "Roger M. Rothstein and Joe Wizan",
      "studios": "20th Century Fox",
      "title": "Two of a Kind",
      "winner": 0,
      "year": 1983,
    },
    {
      "id": 26,
      "producers": "Bo Derek",
      "studios": "Cannon Films",
      "title": "Bolero",
      "winner": 1,
      "year": 1984,
    },
    {
      "id": 27,
      "producers": "Albert S. Ruddy",
      "studios": "Warner Bros.",
      "title": "Cannonball Run II",
      "winner": 0,
      "year": 1984,
    },
    {
      "id": 28,
      "producers": "Marvin Worth and Howard Smith",
      "studios": "20th Century Fox",
      "title": "Rhinestone",
      "winner": 0,
      "year": 1984,
    },
    {
      "id": 29,
      "producers": "Paul Aratow",
      "studios": "Columbia Pictures",
      "title": "Sheena",
      "winner": 0,
      "year": 1984,
    },
    {
      "id": 30,
      "producers": "Allan Carr",
      "studios": "TriStar Pictures",
      "title": "Where the Boys Are '84",
      "winner": 0,
      "year": 1984,
    },
    {
      "id": 31,
      "producers": "Buzz Feitshans",
      "studios": "Columbia Pictures",
      "title": "Rambo: First Blood Part II",
      "winner": 1,
      "year": 1985,
    },
    {
      "id": 32,
      "producers": "Freddie Fields",
      "studios": "MGM, United Artists",
      "title": "Fever Pitch",
      "winner": 0,
      "year": 1985,
    },
    {
      "id": 33,
      "producers": "Irwin Winkler",
      "studios": "Warner Bros.",
      "title": "Revolution",
      "winner": 0,
      "year": 1985,
    },
    {
      "id": 34,
      "producers": "Irwin Winkler and Robert Chartoff",
      "studios": "MGM, United Artists",
      "title": "Rocky IV",
      "winner": 0,
      "year": 1985,
    },
    {
      "id": 35,
      "producers": "Dino De Laurentiis",
      "studios": "MGM, United Artists",
      "title": "Year of the Dragon",
      "winner": 0,
      "year": 1985,
    },
    {
      "id": 36,
      "producers": "Gloria Katz",
      "studios": "Universal Studios",
      "title": "Howard the Duck",
      "winner": 1,
      "year": 1986,
    },
    {
      "id": 37,
      "producers": "Bob Cavallo, Joe Ruffalo and Steve Fargnoli",
      "studios": "Warner Bros.",
      "title": "Under the Cherry Moon",
      "winner": 1,
      "year": 1986,
    },
    {
      "id": 38,
      "producers": "William L. Hayward and Walter Hill",
      "studios": "Paramount Pictures",
      "title": "Blue City",
      "winner": 0,
      "year": 1986,
    },
    {
      "id": 39,
      "producers": "Yoram Globus and Menahem Golan",
      "studios": "Warner Bros., Cannon Films",
      "title": "Cobra",
      "winner": 0,
      "year": 1986,
    },
    {
      "id": 40,
      "producers": "John Kohn",
      "studios": "MGM",
      "title": "Shanghai Surprise",
      "winner": 0,
      "year": 1986,
    },
    {
      "id": 41,
      "producers": "Bill Cosby",
      "studios": "Columbia Pictures",
      "title": "Leonard Part 6",
      "winner": 1,
      "year": 1987,
    },
    {
      "id": 42,
      "producers": "Warren Beatty",
      "studios": "Columbia Pictures",
      "title": "Ishtar",
      "winner": 0,
      "year": 1987,
    },
    {
      "id": 43,
      "producers": "Joseph Sargent",
      "studios": "Universal Studios",
      "title": "Jaws: The Revenge",
      "winner": 0,
      "year": 1987,
    },
    {
      "id": 44,
      "producers": "Yoram Globus and Menahem Golan",
      "studios": "Cannon Films",
      "title": "Tough Guys Don't Dance",
      "winner": 0,
      "year": 1987,
    },
    {
      "id": 45,
      "producers": "Rosilyn Heller and Bernard Williams",
      "studios": "Warner Bros.",
      "title": "Who's That Girl",
      "winner": 0,
      "year": 1987,
    },
    {
      "id": 46,
      "producers": "Ted Field and Robert W. Cort",
      "studios": "Touchstone Pictures",
      "title": "Cocktail",
      "winner": 1,
      "year": 1988,
    },
    {
      "id": 47,
      "producers": "Neil Canton, Jon Peters and Peter Guber",
      "studios": "Warner Bros.",
      "title": "Caddyshack II",
      "winner": 0,
      "year": 1988,
    },
    {
      "id": 48,
      "producers": "Steve Tisch",
      "studios": "Warner Bros.",
      "title": "Hot to Trot",
      "winner": 0,
      "year": 1988,
    },
    {
      "id": 49,
      "producers": "R. J. Louis",
      "studios": "Orion Pictures",
      "title": "Mac and Me",
      "winner": 0,
      "year": 1988,
    },
    {
      "id": 50,
      "producers": "Buzz Feitshans",
      "studios": "TriStar Pictures, Carolco Pictures",
      "title": "Rambo III",
      "winner": 0,
      "year": 1988,
    },
    {
      "id": 51,
      "producers": "Harve Bennett",
      "studios": "Paramount Pictures",
      "title": "Star Trek V: The Final Frontier",
      "winner": 1,
      "year": 1989,
    },
    {
      "id": 52,
      "producers": "Jerry Weintraub",
      "studios": "Columbia Pictures",
      "title": "The Karate Kid Part III",
      "winner": 0,
      "year": 1989,
    },
    {
      "id": 53,
      "producers": "Charles Gordon and Lawrence Gordon",
      "studios": "TriStar Pictures, Carolco Pictures",
      "title": "Lock Up",
      "winner": 0,
      "year": 1989,
    },
    {
      "id": 54,
      "producers": "Joel Silver",
      "studios": "United Artists",
      "title": "Road House",
      "winner": 0,
      "year": 1989,
    },
    {
      "id": 55,
      "producers": "Murray Shostack",
      "studios": "Orion Pictures",
      "title": "Speed Zone",
      "winner": 0,
      "year": 1989,
    },
    {
      "id": 56,
      "producers": "Steven Perry and Joel Silver",
      "studios": "20th Century Fox",
      "title": "The Adventures of Ford Fairlane",
      "winner": 1,
      "year": 1990,
    },
    {
      "id": 57,
      "producers": "Bo Derek",
      "studios": "Triumph Releasing",
      "title": "Ghosts Can't Do It",
      "winner": 1,
      "year": 1990,
    },
    {
      "id": 58,
      "producers": "Brian De Palma",
      "studios": "Warner Bros.",
      "title": "The Bonfire of the Vanities",
      "winner": 0,
      "year": 1990,
    },
    {
      "id": 59,
      "producers": "Randy Phillips and Craig Rice",
      "studios": "Warner Bros.",
      "title": "Graffiti Bridge",
      "winner": 0,
      "year": 1990,
    },
    {
      "id": 60,
      "producers": "Robert Chartoff and Irwin Winkler",
      "studios": "United Artists",
      "title": "Rocky V",
      "winner": 0,
      "year": 1990,
    },
    {
      "id": 61,
      "producers": "Joel Silver",
      "studios": "TriStar Pictures",
      "title": "Hudson Hawk",
      "winner": 1,
      "year": 1991,
    },
    {
      "id": 62,
      "producers": "Carolyn Pfeiffer and Lionel Wingram",
      "studios": "Universal Studios",
      "title": "Cool as Ice",
      "winner": 0,
      "year": 1991,
    },
    {
      "id": 63,
      "producers": "Loucas George",
      "studios": "Seven Arts Productions",
      "title": "Dice Rules",
      "winner": 0,
      "year": 1991,
    },
    {
      "id": 64,
      "producers": "Lester Berman and Robert K. Weiss",
      "studios": "Warner Bros.",
      "title": "Nothing but Trouble",
      "winner": 0,
      "year": 1991,
    },
    {
      "id": 65,
      "producers": "William A. Graham",
      "studios": "Columbia Pictures",
      "title": "Return to the Blue Lagoon",
      "winner": 0,
      "year": 1991,
    },
    {
      "id": 66,
      "producers": "Carol Baum and Howard Rosenman",
      "studios": "20th Century Fox",
      "title": "Shining Through",
      "winner": 1,
      "year": 1992,
    },
    {
      "id": 67,
      "producers": "Kevin Costner, Lawrence Kasdan and Jim Wilson",
      "studios": "Warner Bros.",
      "title": "The Bodyguard",
      "winner": 0,
      "year": 1992,
    },
    {
      "id": 68,
      "producers": "Alexander Salkind and Ilya Salkind",
      "studios": "Warner Bros.",
      "title": "Christopher Columbus: The Discovery",
      "winner": 0,
      "year": 1992,
    },
    {
      "id": 69,
      "producers": "Paul Junger Witt, Charles Roven and Tony Thomas",
      "studios": "20th Century Fox",
      "title": "Final Analysis",
      "winner": 0,
      "year": 1992,
    },
    {
      "id": 70,
      "producers": "Michael Finnell",
      "studios": "Walt Disney Pictures",
      "title": "Newsies",
      "winner": 0,
      "year": 1992,
    },
    {
      "id": 71,
      "producers": "Sherry Lansing",
      "studios": "Paramount Pictures",
      "title": "Indecent Proposal",
      "winner": 1,
      "year": 1993,
    },
    {
      "id": 72,
      "producers": "Dino De Laurentiis",
      "studios": "MGM, United Artists",
      "title": "Body of Evidence",
      "winner": 0,
      "year": 1993,
    },
    {
      "id": 73,
      "producers": "Renny Harlin and Alan Marshall",
      "studios": "TriStar Pictures, Carolco Pictures",
      "title": "Cliffhanger",
      "winner": 0,
      "year": 1993,
    },
    {
      "id": 74,
      "producers": "John McTiernan and Stephen J. Roth",
      "studios": "Columbia Pictures",
      "title": "Last Action Hero",
      "winner": 0,
      "year": 1993,
    },
    {
      "id": 75,
      "producers": "Robert Evans",
      "studios": "Paramount Pictures",
      "title": "Sliver",
      "winner": 0,
      "year": 1993,
    },
    {
      "id": 76,
      "producers": "Buzz Feitshans and David Matalon",
      "studios": "Hollywood Pictures",
      "title": "Color of Night",
      "winner": 1,
      "year": 1994,
    },
    {
      "id": 77,
      "producers": "Rob Reiner and Alan Zweibel",
      "studios": "Columbia Pictures, Castle Rock Entertainment",
      "title": "North",
      "winner": 0,
      "year": 1994,
    },
    {
      "id": 78,
      "producers": "A. Kitman Ho, Julius R. Nasso and Steven Seagal",
      "studios": "Warner Bros.",
      "title": "On Deadly Ground",
      "winner": 0,
      "year": 1994,
    },
    {
      "id": 79,
      "producers": "Jerry Weintraub",
      "studios": "Warner Bros.",
      "title": "The Specialist",
      "winner": 0,
      "year": 1994,
    },
    {
      "id": 80,
      "producers": "Kevin Costner, Lawrence Kasdan and Jim Wilson",
      "studios": "Warner Bros.",
      "title": "Wyatt Earp",
      "winner": 0,
      "year": 1994,
    },
    {
      "id": 81,
      "producers": "Charles Evans and Alan Marshall",
      "studios": "MGM, United Artists",
      "title": "Showgirls",
      "winner": 1,
      "year": 1995,
    },
    {
      "id": 82,
      "producers": "Kathleen Kennedy and Sam Mercer",
      "studios": "Paramount Pictures",
      "title": "Congo",
      "winner": 0,
      "year": 1995,
    },
    {
      "id": 83,
      "producers": "Charles B. Wessler",
      "studios": "Touchstone Pictures",
      "title": "It's Pat",
      "winner": 0,
      "year": 1995,
    },
    {
      "id": 84,
      "producers": "Roland Joffé and Andrew G. Vajna",
      "studios": "Hollywood Pictures",
      "title": "The Scarlet Letter",
      "winner": 0,
      "year": 1995,
    },
    {
      "id": 85,
      "producers": "Kevin Costner, John Davis, Charles Gordon and Lawrence Gordon",
      "studios": "Universal Studios",
      "title": "Waterworld",
      "winner": 0,
      "year": 1995,
    },
    {
      "id": 86,
      "producers": "Andrew Bergman and Mike Lobell",
      "studios": "Columbia Pictures, Castle Rock Entertainment",
      "title": "Striptease",
      "winner": 1,
      "year": 1996,
    },
    {
      "id": 87,
      "producers": "Todd Moyer, Mike Richardson and Brad Wyman",
      "studios": "PolyGram Filmed Entertainment, Gramercy Pictures",
      "title": "Barb Wire",
      "winner": 0,
      "year": 1996,
    },
    {
      "id": 88,
      "producers": "Rosalie Swedlin",
      "studios": "Universal Studios",
      "title": "Ed",
      "winner": 0,
      "year": 1996,
    },
    {
      "id": 89,
      "producers": "Edward R. Pressman",
      "studios": "New Line Cinema",
      "title": "The Island of Dr. Moreau",
      "winner": 0,
      "year": 1996,
    },
    {
      "id": 90,
      "producers": "Leslie Belzberg",
      "studios": "New Line Cinema, Savoy Pictures",
      "title": "The Stupids",
      "winner": 0,
      "year": 1996,
    },
    {
      "id": 91,
      "producers": "Kevin Costner, Steve Tisch and Jim Wilson",
      "studios": "Warner Bros.",
      "title": "The Postman",
      "winner": 1,
      "year": 1997,
    },
    {
      "id": 92,
      "producers": "Verna Harrah, Carole Little and Leonard Rabinowitz",
      "studios": "Columbia Pictures",
      "title": "Anaconda",
      "winner": 0,
      "year": 1997,
    },
    {
      "id": 93,
      "producers": "Peter MacGregor-Scott",
      "studios": "Warner Bros.",
      "title": "Batman & Robin",
      "winner": 0,
      "year": 1997,
    },
    {
      "id": 94,
      "producers": "Julius R. Nasso and Steven Seagal",
      "studios": "Warner Bros.",
      "title": "Fire Down Below",
      "winner": 0,
      "year": 1997,
    },
    {
      "id": 95,
      "producers": "Jan de Bont, Steve Perry and Michael Peyser",
      "studios": "20th Century Fox",
      "title": "Speed 2: Cruise Control",
      "winner": 0,
      "year": 1997,
    },
    {
      "id": 96,
      "producers": "Ben Myron and Joe Eszterhas",
      "studios": "Hollywood Pictures",
      "title": "An Alan Smithee Film: Burn Hollywood Burn",
      "winner": 1,
      "year": 1998,
    },
    {
      "id": 97,
      "producers": "Michael Bay and Jerry Bruckheimer",
      "studios": "Touchstone Pictures",
      "title": "Armageddon",
      "winner": 0,
      "year": 1998,
    },
    {
      "id": 98,
      "producers": "Jerry Weintraub",
      "studios": "Warner Bros.",
      "title": "The Avengers",
      "winner": 0,
      "year": 1998,
    },
    {
      "id": 99,
      "producers": "Roland Emmerich and Dean Devlin",
      "studios": "TriStar Pictures",
      "title": "Godzilla",
      "winner": 0,
      "year": 1998,
    },
    {
      "id": 100,
      "producers": "Uri Fruchtan, Mark L. Rosen and Barnaby Thompson",
      "studios": "Columbia Pictures",
      "title": "Spice World",
      "winner": 0,
      "year": 1998,
    },
    {
      "id": 101,
      "producers": "Jon Peters and Barry Sonnenfeld",
      "studios": "Warner Bros.",
      "title": "Wild Wild West",
      "winner": 1,
      "year": 1999,
    },
    {
      "id": 102,
      "producers": "Sidney Ganis and Jack Giarraputo",
      "studios": "Columbia Pictures",
      "title": "Big Daddy",
      "winner": 0,
      "year": 1999,
    },
    {
      "id": 103,
      "producers": "Robin Cowie and Gregg Hale",
      "studios": "Artisan Entertainment",
      "title": "The Blair Witch Project",
      "winner": 0,
      "year": 1999,
    },
    {
      "id": 104,
      "producers": "Susan Arthur, Donna Roth and Colin Wilson",
      "studios": "DreamWorks",
      "title": "The Haunting",
      "winner": 0,
      "year": 1999,
    },
    {
      "id": 105,
      "producers": "Rick McCallum and George Lucas",
      "studios": "20th Century Fox",
      "title": "Star Wars: Episode I – The Phantom Menace",
      "winner": 0,
      "year": 1999,
    },
    {
      "id": 106,
      "producers": "Jonathan D. Krane, Elie Samaha and John Travolta",
      "studios": "Warner Bros., Franchise Pictures",
      "title": "Battlefield Earth",
      "winner": 1,
      "year": 2000,
    },
    {
      "id": 107,
      "producers": "Bill Carraro",
      "studios": "Artisan Entertainment",
      "title": "Book of Shadows: Blair Witch 2",
      "winner": 0,
      "year": 2000,
    },
    {
      "id": 108,
      "producers": "Bruce Cohen",
      "studios": "Universal Studios",
      "title": "The Flintstones in Viva Rock Vegas",
      "winner": 0,
      "year": 2000,
    },
    {
      "id": 109,
      "producers": "Jack Giarraputo and Robert Simonds",
      "studios": "New Line Cinema",
      "title": "Little Nicky",
      "winner": 0,
      "year": 2000,
    },
    {
      "id": 110,
      "producers": "Leslie Dixon, Linne Radmin and Tom Rosenberg",
      "studios": "Paramount Pictures",
      "title": "The Next Best Thing",
      "winner": 0,
      "year": 2000,
    },
    {
      "id": 111,
      "producers": "Larry Brezner, Howard Lapides and Lauren Lloyd",
      "studios": "20th Century Fox",
      "title": "Freddy Got Fingered",
      "winner": 1,
      "year": 2001,
    },
    {
      "id": 112,
      "producers": "Renny Harlin, Elie Samaha and Sylvester Stallone",
      "studios": "Warner Bros., Franchise Pictures",
      "title": "Driven",
      "winner": 0,
      "year": 2001,
    },
    {
      "id": 113,
      "producers": "Laurence Mark and E. Bennett Walsh",
      "studios": "20th Century Fox, Columbia Pictures",
      "title": "Glitter",
      "winner": 0,
      "year": 2001,
    },
    {
      "id": 114,
      "producers": "Michael Bay and Jerry Bruckheimer",
      "studios": "Touchstone Pictures",
      "title": "Pearl Harbor",
      "winner": 0,
      "year": 2001,
    },
    {
      "id": 115,
      "producers": "Demian Lichtenstein, Eric Manes, Elie Samaha, Richard Spero and Andrew Stevens",
      "studios": "Warner Bros., Franchise Pictures",
      "title": "3000 Miles to Graceland",
      "winner": 0,
      "year": 2001,
    },
    {
      "id": 116,
      "producers": "Matthew Vaughn",
      "studios": "Screen Gems",
      "title": "Swept Away",
      "winner": 1,
      "year": 2002,
    },
    {
      "id": 117,
      "producers": "Martin Bregman, Michael Scott Bregman and Louis A. Stroller",
      "studios": "Warner Bros.",
      "title": "The Adventures of Pluto Nash",
      "winner": 0,
      "year": 2002,
    },
    {
      "id": 118,
      "producers": "Ann Carli",
      "studios": "Paramount Pictures",
      "title": "Crossroads",
      "winner": 0,
      "year": 2002,
    },
    {
      "id": 119,
      "producers": "Gianluigi Braschi, Nicoletta Braschi and Elda Ferri",
      "studios": "Miramax Films",
      "title": "Pinocchio",
      "winner": 0,
      "year": 2002,
    },
    {
      "id": 120,
      "producers": "Rick McCallum and George Lucas",
      "studios": "20th Century Fox",
      "title": "Star Wars: Episode II – Attack of the Clones",
      "winner": 0,
      "year": 2002,
    },
    {
      "id": 121,
      "producers": "Martin Brest and Casey Silver",
      "studios": "Columbia Pictures, Revolution Studios",
      "title": "Gigli",
      "winner": 1,
      "year": 2003,
    },
    {
      "id": 122,
      "producers": "Brian Grazer",
      "studios": "Universal Studios, DreamWorks",
      "title": "The Cat in the Hat",
      "winner": 0,
      "year": 2003,
    },
    {
      "id": 123,
      "producers": "Drew Barrymore, Leonard Goldberg and Nancy Juvonen",
      "studios": "Columbia Pictures",
      "title": "Charlie's Angels: Full Throttle",
      "winner": 0,
      "year": 2003,
    },
    {
      "id": 124,
      "producers": "John Steven Agoglia",
      "studios": "20th Century Fox",
      "title": "From Justin to Kelly",
      "winner": 0,
      "year": 2003,
    },
    {
      "id": 125,
      "producers": "Mary-Ellis Bunim, Jonathan Murray, Jamie Schutz and Rick de Oliveira",
      "studios": "New Line Cinema",
      "title": "The Real Cancun",
      "winner": 0,
      "year": 2003,
    },
    {
      "id": 126,
      "producers": "Denise Di Novi and Edward McDonnell",
      "studios": "Warner Bros.",
      "title": "Catwoman",
      "winner": 1,
      "year": 2004,
    },
    {
      "id": 127,
      "producers": "Moritz Borman, Jon Kilik, Thomas Schuhly and Iain Smith",
      "studios": "Warner Bros.",
      "title": "Alexander",
      "winner": 0,
      "year": 2004,
    },
    {
      "id": 128,
      "producers": "Steven Paul",
      "studios": "Triumph Films",
      "title": "Superbabies: Baby Geniuses 2",
      "winner": 0,
      "year": 2004,
    },
    {
      "id": 129,
      "producers": "Betty Thomas and Jenno Topping",
      "studios": "DreamWorks",
      "title": "Surviving Christmas",
      "winner": 0,
      "year": 2004,
    },
    {
      "id": 130,
      "producers": "Rick Alvarez, Lee R. Mayes, Keenen Ivory Wayans, Marlon Wayans and Shawn Wayans",
      "studios": "Columbia Pictures, Revolution Studios",
      "title": "White Chicks",
      "winner": 0,
      "year": 2004,
    },
    {
      "id": 131,
      "producers": "John Mallory Asher, BJ Davis, Rod Hamilton, Kimberley Kates, Michael Manasseri, Jenny McCarthy and Trent Walford",
      "studios": "First Look Pictures",
      "title": "Dirty Love",
      "winner": 1,
      "year": 2005,
    },
    {
      "id": 132,
      "producers": "Adam Sandler and Rob Schneider",
      "studios": "Columbia Pictures",
      "title": "Deuce Bigalow: European Gigolo",
      "winner": 0,
      "year": 2005,
    },
    {
      "id": 133,
      "producers": "Bill Gerber",
      "studios": "Warner Bros., Village Roadshow",
      "title": "The Dukes of Hazzard",
      "winner": 0,
      "year": 2005,
    },
    {
      "id": 134,
      "producers": "Susan Levin, Joel Silver and Robert Zemeckis",
      "studios": "Warner Bros., Village Roadshow",
      "title": "House of Wax",
      "winner": 0,
      "year": 2005,
    },
    {
      "id": 135,
      "producers": "Erica Huggins and Scott Kroopf",
      "studios": "New Line Cinema",
      "title": "Son of the Mask",
      "winner": 0,
      "year": 2005,
    },
    {
      "id": 136,
      "producers": "Mario Kassar, Joel B. Michaels and Andrew G. Vajna",
      "studios": "MGM, C2 Pictures",
      "title": "Basic Instinct 2",
      "winner": 1,
      "year": 2006,
    },
    {
      "id": 137,
      "producers": "Uwe Boll, Dan Clarke and Wolfgang Herrold",
      "studios": "Romar Entertainment",
      "title": "BloodRayne",
      "winner": 0,
      "year": 2006,
    },
    {
      "id": 138,
      "producers": "Sam Mercer, Jose L. Rodriguez and M. Night Shyamalan",
      "studios": "Warner Bros.",
      "title": "Lady in the Water",
      "winner": 0,
      "year": 2006,
    },
    {
      "id": 139,
      "producers": "Rick Alvares, Lee Mays, Marlon Wayans and Shawn Wayans",
      "studios": "Columbia Pictures, Revolution Studios",
      "title": "Little Man",
      "winner": 0,
      "year": 2006,
    },
    {
      "id": 140,
      "producers": "Nicolas Cage, Randall Emmett, Norm Golightly, Avi Lerner and Joanne Sellar",
      "studios": "Warner Bros.",
      "title": "The Wicker Man",
      "winner": 0,
      "year": 2006,
    },
    {
      "id": 141,
      "producers": "David Grace and Frank Mancuso Jr.",
      "studios": "TriStar Pictures",
      "title": "I Know Who Killed Me",
      "winner": 0,
      "year": 2007,
    },
    {
      "id": 142,
      "producers": "Avi Arad, Isaac Larian and Steven Paul",
      "studios": "Lionsgate",
      "title": "Bratz",
      "winner": 0,
      "year": 2007,
    },
    {
      "id": 143,
      "producers": "Matt Berenson, John Davis and Wyck Godfrey",
      "studios": "TriStar Pictures, Revolution Studios",
      "title": "Daddy Day Camp",
      "winner": 0,
      "year": 2007,
    },
    {
      "id": 144,
      "producers": "Adam Sandler and Tom Shadyac",
      "studios": "Universal Studios",
      "title": "I Now Pronounce You Chuck & Larry",
      "winner": 0,
      "year": 2007,
    },
    {
      "id": 145,
      "producers": "John Davis, Eddie Murphy and Michael Tollin",
      "studios": "DreamWorks",
      "title": "Norbit",
      "winner": 0,
      "year": 2007,
    },
    {
      "id": 146,
      "producers": "Gary Barber, Michael DeLuca and Mike Myers",
      "studios": "Paramount Pictures",
      "title": "The Love Guru",
      "winner": 1,
      "year": 2008,
    },
    {
      "id": 147,
      "producers": "Jason Friedberg, Peter Safran and Aaron Seltzer",
      "studios": "Lionsgate, 20th Century Fox",
      "title": "Disaster Movie and Meet the Spartans",
      "winner": 0,
      "year": 2008,
    },
    {
      "id": 148,
      "producers": "Barry Mendel, Sam Mercer and M. Night Shyamalan",
      "studios": "20th Century Fox",
      "title": "The Happening",
      "winner": 0,
      "year": 2008,
    },
    {
      "id": 149,
      "producers": "Hadeel Reda",
      "studios": "Regent Releasing",
      "title": "The Hottie & the Nottie",
      "winner": 0,
      "year": 2008,
    },
    {
      "id": 150,
      "producers": "Uwe Boll, Dan Clarke, Wolfgang Herrold and Shawn Williamson",
      "studios": "Boll KG, Brightlight Pictures",
      "title": "In the Name of the King",
      "winner": 0,
      "year": 2008,
    },
    {
      "id": 151,
      "producers": "Lorenzo di Bonaventura, Ian Bryce, Tom DeSanto and Don Murphy",
      "studios": "Paramount Pictures, DreamWorks, Hasbro",
      "title": "Transformers: Revenge of the Fallen",
      "winner": 1,
      "year": 2009,
    },
    {
      "id": 152,
      "producers": "Sandra Bullock and Mary McLaglen",
      "studios": "20th Century Fox",
      "title": "All About Steve",
      "winner": 0,
      "year": 2009,
    },
    {
      "id": 153,
      "producers": "Lorenzo di Bonaventura, Bob Ducsay and Brian Goldner",
      "studios": "Paramount Pictures, Hasbro",
      "title": "G.I. Joe: The Rise of Cobra",
      "winner": 0,
      "year": 2009,
    },
    {
      "id": 154,
      "producers": "Sid and Marty Krofft and Jimmy Miller",
      "studios": "Universal Studios",
      "title": "Land of the Lost",
      "winner": 0,
      "year": 2009,
    },
    {
      "id": 155,
      "producers": "Peter Abrams, Robert Levy and Andrew Panay",
      "studios": "Walt Disney Pictures",
      "title": "Old Dogs",
      "winner": 0,
      "year": 2009,
    },
    {
      "id": 156,
      "producers": "Frank Marshall, Kathleen Kennedy, Sam Mercer and M. Night Shyamalan",
      "studios": "Paramount Pictures, Nickelodeon Movies",
      "title": "The Last Airbender",
      "winner": 1,
      "year": 2010,
    },
    {
      "id": 157,
      "producers": "Neal H. Moritz",
      "studios": "Columbia Pictures",
      "title": "The Bounty Hunter",
      "winner": 0,
      "year": 2010,
    },
    {
      "id": 158,
      "producers": "Michael Patrick King, John Melfi, Sarah Jessica Parker and Darren Star",
      "studios": "New Line Cinema, HBO Films, Village Roadshow Pictures",
      "title": "Sex and the City 2",
      "winner": 0,
      "year": 2010,
    },
    {
      "id": 159,
      "producers": "Wyck Godfrey and Karen Rosenfelt",
      "studios": "Summit Entertainment",
      "title": "The Twilight Saga: Eclipse",
      "winner": 0,
      "year": 2010,
    },
    {
      "id": 160,
      "producers": "Jason Friedberg, Peter Safran and Aaron Seltzer",
      "studios": "20th Century Fox",
      "title": "Vampires Suck",
      "winner": 0,
      "year": 2010,
    },
    {
      "id": 161,
      "producers": "Todd Garner, Jack Giarraputo and Adam Sandler",
      "studios": "Columbia Pictures",
      "title": "Jack and Jill",
      "winner": 1,
      "year": 2011,
    },
    {
      "id": 162,
      "producers": "Barry Bernardi, Allen Covert, David Dorfman and Jack Giarraputo",
      "studios": "Columbia Pictures",
      "title": "Bucky Larson: Born to Be a Star",
      "winner": 0,
      "year": 2011,
    },
    {
      "id": 163,
      "producers": "Mike Karz, Garry Marshall and Wayne Allan Rice",
      "studios": "Warner Bros., New Line Cinema",
      "title": "New Year's Eve",
      "winner": 0,
      "year": 2011,
    },
    {
      "id": 164,
      "producers": "Lorenzo di Bonaventura, Ian Bryce, Tom DeSanto and Don Murphy",
      "studios": "Paramount Pictures",
      "title": "Transformers: Dark of the Moon",
      "winner": 0,
      "year": 2011,
    },
    {
      "id": 165,
      "producers": "Wyck Godfrey, Stephenie Meyer and Karen Rosenfelt",
      "studios": "Summit Entertainment",
      "title": "The Twilight Saga: Breaking Dawn – Part 1",
      "winner": 0,
      "year": 2011,
    },
    {
      "id": 166,
      "producers": "Wyck Godfrey, Stephenie Meyer and Karen Rosenfelt",
      "studios": "Summit Entertainment",
      "title": "The Twilight Saga: Breaking Dawn – Part 2",
      "winner": 1,
      "year": 2012,
    },
    {
      "id": 167,
      "producers": "Sarah Aubrey, Peter Berg, Brian Goldner, Duncan Henderson, Bennett Schneir and Scott Stuber",
      "studios": "Universal Studios",
      "title": "Battleship",
      "winner": 0,
      "year": 2012,
    },
    {
      "id": 168,
      "producers": "Gayle Dickie, Kenn Viselman",
      "studios": "Lionsgate Films, Romar Entertainment, Kenn Viselman Presents",
      "title": "The Oogieloves in the Big Balloon Adventure",
      "winner": 0,
      "year": 2012,
    },
    {
      "id": 169,
      "producers": "Allen Covert, Jack Giarraputo, Heather Parry and Adam Sandler",
      "studios": "Columbia Pictures",
      "title": "That's My Boy",
      "winner": 0,
      "year": 2012,
    },
    {
      "id": 170,
      "producers": "Nicolas Cage, Alain Chabat, Stephanie Danan, Norman Golightly, Brian Robbinsand Sharla Sumpter Bridgett",
      "studios": "Paramount Pictures, DreamWorks",
      "title": "A Thousand Words",
      "winner": 0,
      "year": 2012,
    },
    {
      "id": 171,
      "producers": "Peter Farrelly, Ryan Kavanaugh, John Penotti and Charles B. Wessler",
      "studios": "Relativity Media",
      "title": "Movie 43",
      "winner": 1,
      "year": 2013,
    },
    {
      "id": 172,
      "producers": "James Lassiter, Caleeb Pinkett, Jada Pinkett Smith, M. Night Shyamalan, Will Smith and Jaden Smith",
      "studios": "Columbia Pictures",
      "title": "After Earth",
      "winner": 0,
      "year": 2013,
    },
    {
      "id": 173,
      "producers": "Jack Giarraputo and Adam Sandler",
      "studios": "Columbia Pictures",
      "title": "Grown Ups 2",
      "winner": 0,
      "year": 2013,
    },
    {
      "id": 174,
      "producers": "Jerry Bruckheimer and Gore Verbinski",
      "studios": "Walt Disney Pictures",
      "title": "The Lone Ranger",
      "winner": 0,
      "year": 2013,
    },
    {
      "id": 175,
      "producers": "Ozzie Areu, Matt Moore and Tyler Perry",
      "studios": "Lionsgate",
      "title": "A Madea Christmas",
      "winner": 0,
      "year": 2013,
    },
    {
      "id": 176,
      "producers": "Darren Doane, Raphi Henley, Amanda Rosser and David Shannon",
      "studios": "Samuel Goldwyn Films",
      "title": "Saving Christmas",
      "winner": 1,
      "year": 2014,
    },
    {
      "id": 177,
      "producers": "Michael Walker and Paul LaLonde",
      "studios": "Freestyle Releasing, Entertainment One",
      "title": "Left Behind",
      "winner": 0,
      "year": 2014,
    },
    {
      "id": 178,
      "producers": "Boaz Davidson, Renny Harlin, Danny Lerner and Les Weldon",
      "studios": "Summit Entertainment",
      "title": "The Legend of Hercules",
      "winner": 0,
      "year": 2014,
    },
    {
      "id": 179,
      "producers": "Michael Bay, Ian Bryce, Andrew Form, Bradley Fuller, Scott Mednick and Galen Walker",
      "studios": "Paramount Pictures, Nickelodeon Movies, Platinum Dunes",
      "title": "Teenage Mutant Ninja Turtles",
      "winner": 0,
      "year": 2014,
    },
    {
      "id": 180,
      "producers": "Ian Bryce, Tom DeSanto, Lorenzo di Bonaventura and Don Murphy",
      "studios": "Paramount Pictures",
      "title": "Transformers: Age of Extinction",
      "winner": 0,
      "year": 2014,
    },
    {
      "id": 181,
      "producers": "Simon Kinberg, Matthew Vaughn, Hutch Parker, Robert Kulzer and Gregory Goodman",
      "studios": "20th Century Fox",
      "title": "Fantastic Four",
      "winner": 1,
      "year": 2015,
    },
    {
      "id": 182,
      "producers": "Michael De Luca, Dana Brunetti and E. L. James",
      "studios": "Universal Pictures, Focus Features",
      "title": "Fifty Shades of Grey",
      "winner": 1,
      "year": 2015,
    },
    {
      "id": 183,
      "producers": "Grant Hill and The Wachowskis",
      "studios": "Warner Bros.",
      "title": "Jupiter Ascending",
      "winner": 0,
      "year": 2015,
    },
    {
      "id": 184,
      "producers": "Todd Garner, Kevin James and Adam Sandler",
      "studios": "Columbia Pictures",
      "title": "Paul Blart: Mall Cop 2",
      "winner": 0,
      "year": 2015,
    },
    {
      "id": 185,
      "producers": "Adam Sandler, Chris Columbus, Mark Radcliffe and Allen Covert",
      "studios": "Columbia Pictures",
      "title": "Pixels",
      "winner": 0,
      "year": 2015,
    },
    {
      "id": 186,
      "producers": "Gerald R. Molen",
      "studios": "Quality Flix",
      "title": "Hillary's America: The Secret History of the Democratic Party",
      "winner": 1,
      "year": 2016,
    },
    {
      "id": 187,
      "producers": "Charles Roven and Deborah Snyder",
      "studios": "Warner Bros.",
      "title": "Batman v Superman: Dawn of Justice",
      "winner": 0,
      "year": 2016,
    },
    {
      "id": 188,
      "producers": "Bill Block, Michael Simkin, Jason Barrett and Barry Josephson",
      "studios": "Lionsgate",
      "title": "Dirty Grandpa",
      "winner": 0,
      "year": 2016,
    },
    {
      "id": 189,
      "producers": "Basil Iwanyk and Alex Proyas",
      "studios": "Summit Entertainment",
      "title": "Gods of Egypt",
      "winner": 0,
      "year": 2016,
    },
    {
      "id": 190,
      "producers": "Dean Devlin, Harald Kloser and Roland Emmerich",
      "studios": "20th Century Fox",
      "title": "Independence Day: Resurgence",
      "winner": 0,
      "year": 2016,
    },
    {
      "id": 191,
      "producers": "Stuart Cornfeld, Scott Rudin, Ben Stiller and Clayton Townsend",
      "studios": "Paramount Pictures",
      "title": "Zoolander 2",
      "winner": 0,
      "year": 2016,
    },
    {
      "id": 192,
      "producers": "Michelle Raimo Kouyate",
      "studios": "Columbia Pictures",
      "title": "The Emoji Movie",
      "winner": 1,
      "year": 2017,
    },
    {
      "id": 193,
      "producers": "Ivan Reitman, Michael Berk, Douglas Schwartz, Gregory J. Bonann and Beau Flynn",
      "studios": "Paramount Pictures",
      "title": "Baywatch",
      "winner": 0,
      "year": 2017,
    },
    {
      "id": 194,
      "producers": "Michael De Luca, E. L. James, Dana Brunetti and Marcus Viscidi",
      "studios": "Universal Pictures",
      "title": "Fifty Shades Darker",
      "winner": 0,
      "year": 2017,
    },
    {
      "id": 195,
      "producers": "Alex Kurtzman, Chris Morgan, Sean Daniel and Sarah Bradshaw",
      "studios": "Universal Pictures",
      "title": "The Mummy",
      "winner": 0,
      "year": 2017,
    },
    {
      "id": 196,
      "producers": "Don Murphy, Tom DeSanto, Lorenzo di Bonaventura and Ian Bryce",
      "studios": "Paramount Pictures",
      "title": "Transformers: The Last Knight",
      "winner": 0,
      "year": 2017,
    },
    {
      "id": 197,
      "producers": "Will Ferrell, Adam McKay, Jimmy Miller and Clayton Townsend",
      "studios": "Columbia Pictures",
      "title": "Holmes & Watson",
      "winner": 1,
      "year": 2018,
    },
    {
      "id": 198,
      "producers": "Randall Emmett, Marc Fiore, Michael Froch and George Furla",
      "studios": "Vertical Entertainment",
      "title": "Gotti",
      "winner": 0,
      "year": 2018,
    },
    {
      "id": 199,
      "producers": "Ben Falcone, Jeffrey Hayes, Brian Henson and Melissa McCarthy",
      "studios": "STX",
      "title": "The Happytime Murders",
      "winner": 0,
      "year": 2018,
    },
    {
      "id": 200,
      "producers": "Jennifer Davisson and Leonardo DiCaprio",
      "studios": "Summit Entertainment",
      "title": "Robin Hood",
      "winner": 0,
      "year": 2018,
    },
    {
      "id": 201,
      "producers": "Tim McGahan and Brett Tomberlin",
      "studios": "Lionsgate",
      "title": "Winchester",
      "winner": 0,
      "year": 2018,
    },
    {
      "id": 202,
      "producers": "Debra Hayward, Tim Bevan, Eric Fellner, and Tom Hooper",
      "studios": "Universal Pictures",
      "title": "Cats",
      "winner": 1,
      "year": 2019,
    },
    {
      "id": 203,
      "producers": "Daniel Grodnik, Oscar Generale, and Bill Kenwright",
      "studios": "Quiver Distribution",
      "title": "The Fanatic",
      "winner": 0,
      "year": 2019,
    },
    {
      "id": 204,
      "producers": "Lucas Jarach, Daniel Farrands, and Eric Brenner",
      "studios": "Saban Films",
      "title": "The Haunting of Sharon Tate",
      "winner": 0,
      "year": 2019,
    },
    {
      "id": 205,
      "producers": "Ozzie Areu, Will Areu, and Mark E. Swinton",
      "studios": "Lionsgate",
      "title": "A Madea Family Funeral",
      "winner": 0,
      "year": 2019,
    },
    {
      "id": 206,
      "producers": "Avi Lerner, Kevin King Templeton, Yariv Lerner, and Les Weldon",
      "studios": "Lionsgate",
      "title": "Rambo: Last Blood",
      "winner": 0,
      "year": 2019,
    },
    {
      "id": 207,
      "producers": "Allan Carr",
      "studios": "Associated Film Distribution",
      "title": "Can't Stop the Music",
      "winner": 1,
      "year": 1980,
    },
    {
      "id": 208,
      "producers": "Jerry Weintraub",
      "studios": "Lorimar Productions, United Artists",
      "title": "Cruising",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 209,
      "producers": "Steve Shagan",
      "studios": "MGM, United Artists",
      "title": "The Formula",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 210,
      "producers": "Sean S. Cunningham",
      "studios": "Paramount Pictures",
      "title": "Friday the 13th",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 211,
      "producers": "Jennings Lang",
      "studios": "Universal Studios",
      "title": "The Nude Bomb",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 212,
      "producers": "Jerry Leider",
      "studios": "Associated Film Distribution",
      "title": "The Jazz Singer",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 213,
      "producers": "William Frye",
      "studios": "Associated Film Distribution",
      "title": "Raise the Titanic",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 214,
      "producers": "Stanley Donen",
      "studios": "Associated Film Distribution",
      "title": "Saturn 3",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 215,
      "producers": "Mike Lobell",
      "studios": "United Artists",
      "title": "Windows",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 216,
      "producers": "Lawrence Gordon",
      "studios": "Universal Studios",
      "title": "Xanadu",
      "winner": 0,
      "year": 1980,
    },
    {
      "id": 217,
      "producers": "Frank Yablans",
      "studios": "Paramount Pictures",
      "title": "Mommie Dearest",
      "winner": 1,
      "year": 1981,
    },
    {
      "id": 218,
      "producers": "Dyson Lovell",
      "studios": "Universal Studios, PolyGram",
      "title": "Endless Love",
      "winner": 0,
      "year": 1981,
    },
    {
      "id": 219,
      "producers": "Joann Carelli",
      "studios": "United Artists",
      "title": "Heaven's Gate",
      "winner": 0,
      "year": 1981,
    },
    {
      "id": 220,
      "producers": "Walter Coblenz",
      "studios": "Universal Studios, Associated Film Distribution",
      "title": "The Legend of the Lone Ranger",
      "winner": 0,
      "year": 1981,
    },
    {
      "id": 221,
      "producers": "John Derek",
      "studios": "MGM, United Artists",
      "title": "Tarzan, the Ape Man",
      "winner": 0,
      "year": 1981,
    },
    {
      "id": 222,
      "producers": "Mitsuharu Ishii",
      "studios": "MGM",
      "title": "Inchon",
      "winner": 1,
      "year": 1982,
    },
    {
      "id": 223,
      "producers": "Ray Stark",
      "studios": "Columbia Pictures",
      "title": "Annie",
      "winner": 0,
      "year": 1982,
    },
    {
      "id": 224,
      "producers": "Matt Cimber",
      "studios": "Analysis Film Releasing",
      "title": "Butterfly",
      "winner": 0,
      "year": 1982,
    },
    {
      "id": 225,
      "producers": "Albert S. Ruddy",
      "studios": "20th Century Fox",
      "title": "Megaforce",
      "winner": 0,
      "year": 1982,
    },
    {
      "id": 226,
      "producers": "David Joseph",
      "studios": "20th Century Fox",
      "title": "The Pirate Movie",
      "winner": 0,
      "year": 1982,
    },
    {
      "id": 227,
      "producers": "Robert R. Weston",
      "studios": "Universal Studios",
      "title": "The Lonely Lady",
      "winner": 1,
      "year": 1983,
    },
    {
      "id": 228,
      "producers": "Yoram Globus and Menahem Golan",
      "studios": "MGM, United Artists, Cannon Films",
      "title": "Hercules",
      "winner": 0,
      "year": 1983,
    },
    {
      "id": 229,
      "producers": "Rupert Hitzig",
      "studios": "Universal Studios",
      "title": "Jaws 3-D",
      "winner": 0,
      "year": 1983,
    },
    {
      "id": 230,
      "producers": "Hank Moonjean",
      "studios": "Warner Bros., Universal Studios",
      "title": "Stroker Ace",
      "winner": 0,
      "year": 1983,
    },
    {
      "id": 231,
      "producers": "Roger M. Rothstein and Joe Wizan",
      "studios": "20th Century Fox",
      "title": "Two of a Kind",
      "winner": 0,
      "year": 1983,
    },
    {
      "id": 232,
      "producers": "Bo Derek",
      "studios": "Cannon Films",
      "title": "Bolero",
      "winner": 1,
      "year": 1984,
    },
    {
      "id": 233,
      "producers": "Albert S. Ruddy",
      "studios": "Warner Bros.",
      "title": "Cannonball Run II",
      "winner": 0,
      "year": 1984,
    },
    {
      "id": 234,
      "producers": "Marvin Worth and Howard Smith",
      "studios": "20th Century Fox",
      "title": "Rhinestone",
      "winner": 0,
      "year": 1984,
    },
    {
      "id": 235,
      "producers": "Paul Aratow",
      "studios": "Columbia Pictures",
      "title": "Sheena",
      "winner": 0,
      "year": 1984,
    },
    {
      "id": 236,
      "producers": "Allan Carr",
      "studios": "TriStar Pictures",
      "title": "Where the Boys Are '84",
      "winner": 0,
      "year": 1984,
    },
    {
      "id": 237,
      "producers": "Buzz Feitshans",
      "studios": "Columbia Pictures",
      "title": "Rambo: First Blood Part II",
      "winner": 1,
      "year": 1985,
    },
    {
      "id": 238,
      "producers": "Freddie Fields",
      "studios": "MGM, United Artists",
      "title": "Fever Pitch",
      "winner": 0,
      "year": 1985,
    },
    {
      "id": 239,
      "producers": "Irwin Winkler",
      "studios": "Warner Bros.",
      "title": "Revolution",
      "winner": 0,
      "year": 1985,
    },
    {
      "id": 240,
      "producers": "Irwin Winkler and Robert Chartoff",
      "studios": "MGM, United Artists",
      "title": "Rocky IV",
      "winner": 0,
      "year": 1985,
    },
    {
      "id": 241,
      "producers": "Dino De Laurentiis",
      "studios": "MGM, United Artists",
      "title": "Year of the Dragon",
      "winner": 0,
      "year": 1985,
    },
    {
      "id": 242,
      "producers": "Gloria Katz",
      "studios": "Universal Studios",
      "title": "Howard the Duck",
      "winner": 1,
      "year": 1986,
    },
    {
      "id": 243,
      "producers": "Bob Cavallo, Joe Ruffalo and Steve Fargnoli",
      "studios": "Warner Bros.",
      "title": "Under the Cherry Moon",
      "winner": 1,
      "year": 1986,
    },
    {
      "id": 244,
      "producers": "William L. Hayward and Walter Hill",
      "studios": "Paramount Pictures",
      "title": "Blue City",
      "winner": 0,
      "year": 1986,
    },
    {
      "id": 245,
      "producers": "Yoram Globus and Menahem Golan",
      "studios": "Warner Bros., Cannon Films",
      "title": "Cobra",
      "winner": 0,
      "year": 1986,
    },
    {
      "id": 246,
      "producers": "John Kohn",
      "studios": "MGM",
      "title": "Shanghai Surprise",
      "winner": 0,
      "year": 1986,
    },
    {
      "id": 247,
      "producers": "Bill Cosby",
      "studios": "Columbia Pictures",
      "title": "Leonard Part 6",
      "winner": 1,
      "year": 1987,
    },
    {
      "id": 248,
      "producers": "Warren Beatty",
      "studios": "Columbia Pictures",
      "title": "Ishtar",
      "winner": 0,
      "year": 1987,
    },
    {
      "id": 249,
      "producers": "Joseph Sargent",
      "studios": "Universal Studios",
      "title": "Jaws: The Revenge",
      "winner": 0,
      "year": 1987,
    },
    {
      "id": 250,
      "producers": "Yoram Globus and Menahem Golan",
      "studios": "Cannon Films",
      "title": "Tough Guys Don't Dance",
      "winner": 0,
      "year": 1987,
    },
    {
      "id": 251,
      "producers": "Rosilyn Heller and Bernard Williams",
      "studios": "Warner Bros.",
      "title": "Who's That Girl",
      "winner": 0,
      "year": 1987,
    },
    {
      "id": 252,
      "producers": "Ted Field and Robert W. Cort",
      "studios": "Touchstone Pictures",
      "title": "Cocktail",
      "winner": 1,
      "year": 1988,
    },
    {
      "id": 253,
      "producers": "Neil Canton, Jon Peters and Peter Guber",
      "studios": "Warner Bros.",
      "title": "Caddyshack II",
      "winner": 0,
      "year": 1988,
    },
    {
      "id": 254,
      "producers": "Steve Tisch",
      "studios": "Warner Bros.",
      "title": "Hot to Trot",
      "winner": 0,
      "year": 1988,
    },
    {
      "id": 255,
      "producers": "R. J. Louis",
      "studios": "Orion Pictures",
      "title": "Mac and Me",
      "winner": 0,
      "year": 1988,
    },
    {
      "id": 256,
      "producers": "Buzz Feitshans",
      "studios": "TriStar Pictures, Carolco Pictures",
      "title": "Rambo III",
      "winner": 0,
      "year": 1988,
    },
    {
      "id": 257,
      "producers": "Harve Bennett",
      "studios": "Paramount Pictures",
      "title": "Star Trek V: The Final Frontier",
      "winner": 1,
      "year": 1989,
    },
    {
      "id": 258,
      "producers": "Jerry Weintraub",
      "studios": "Columbia Pictures",
      "title": "The Karate Kid Part III",
      "winner": 0,
      "year": 1989,
    },
    {
      "id": 259,
      "producers": "Charles Gordon and Lawrence Gordon",
      "studios": "TriStar Pictures, Carolco Pictures",
      "title": "Lock Up",
      "winner": 0,
      "year": 1989,
    },
    {
      "id": 260,
      "producers": "Joel Silver",
      "studios": "United Artists",
      "title": "Road House",
      "winner": 0,
      "year": 1989,
    },
    {
      "id": 261,
      "producers": "Murray Shostack",
      "studios": "Orion Pictures",
      "title": "Speed Zone",
      "winner": 0,
      "year": 1989,
    },
    {
      "id": 262,
      "producers": "Steven Perry and Joel Silver",
      "studios": "20th Century Fox",
      "title": "The Adventures of Ford Fairlane",
      "winner": 1,
      "year": 1990,
    },
    {
      "id": 263,
      "producers": "Bo Derek",
      "studios": "Triumph Releasing",
      "title": "Ghosts Can't Do It",
      "winner": 1,
      "year": 1990,
    },
    {
      "id": 264,
      "producers": "Brian De Palma",
      "studios": "Warner Bros.",
      "title": "The Bonfire of the Vanities",
      "winner": 0,
      "year": 1990,
    },
    {
      "id": 265,
      "producers": "Randy Phillips and Craig Rice",
      "studios": "Warner Bros.",
      "title": "Graffiti Bridge",
      "winner": 0,
      "year": 1990,
    },
    {
      "id": 266,
      "producers": "Robert Chartoff and Irwin Winkler",
      "studios": "United Artists",
      "title": "Rocky V",
      "winner": 0,
      "year": 1990,
    },
    {
      "id": 267,
      "producers": "Joel Silver",
      "studios": "TriStar Pictures",
      "title": "Hudson Hawk",
      "winner": 1,
      "year": 1991,
    },
    {
      "id": 268,
      "producers": "Carolyn Pfeiffer and Lionel Wingram",
      "studios": "Universal Studios",
      "title": "Cool as Ice",
      "winner": 0,
      "year": 1991,
    },
    {
      "id": 269,
      "producers": "Loucas George",
      "studios": "Seven Arts Productions",
      "title": "Dice Rules",
      "winner": 0,
      "year": 1991,
    },
    {
      "id": 270,
      "producers": "Lester Berman and Robert K. Weiss",
      "studios": "Warner Bros.",
      "title": "Nothing but Trouble",
      "winner": 0,
      "year": 1991,
    },
    {
      "id": 271,
      "producers": "William A. Graham",
      "studios": "Columbia Pictures",
      "title": "Return to the Blue Lagoon",
      "winner": 0,
      "year": 1991,
    },
    {
      "id": 272,
      "producers": "Carol Baum and Howard Rosenman",
      "studios": "20th Century Fox",
      "title": "Shining Through",
      "winner": 1,
      "year": 1992,
    },
    {
      "id": 273,
      "producers": "Kevin Costner, Lawrence Kasdan and Jim Wilson",
      "studios": "Warner Bros.",
      "title": "The Bodyguard",
      "winner": 0,
      "year": 1992,
    },
    {
      "id": 274,
      "producers": "Alexander Salkind and Ilya Salkind",
      "studios": "Warner Bros.",
      "title": "Christopher Columbus: The Discovery",
      "winner": 0,
      "year": 1992,
    },
    {
      "id": 275,
      "producers": "Paul Junger Witt, Charles Roven and Tony Thomas",
      "studios": "20th Century Fox",
      "title": "Final Analysis",
      "winner": 0,
      "year": 1992,
    },
    {
      "id": 276,
      "producers": "Michael Finnell",
      "studios": "Walt Disney Pictures",
      "title": "Newsies",
      "winner": 0,
      "year": 1992,
    },
    {
      "id": 277,
      "producers": "Sherry Lansing",
      "studios": "Paramount Pictures",
      "title": "Indecent Proposal",
      "winner": 1,
      "year": 1993,
    },
    {
      "id": 278,
      "producers": "Dino De Laurentiis",
      "studios": "MGM, United Artists",
      "title": "Body of Evidence",
      "winner": 0,
      "year": 1993,
    },
    {
      "id": 279,
      "producers": "Renny Harlin and Alan Marshall",
      "studios": "TriStar Pictures, Carolco Pictures",
      "title": "Cliffhanger",
      "winner": 0,
      "year": 1993,
    },
    {
      "id": 280,
      "producers": "John McTiernan and Stephen J. Roth",
      "studios": "Columbia Pictures",
      "title": "Last Action Hero",
      "winner": 0,
      "year": 1993,
    },
    {
      "id": 281,
      "producers": "Robert Evans",
      "studios": "Paramount Pictures",
      "title": "Sliver",
      "winner": 0,
      "year": 1993,
    },
    {
      "id": 282,
      "producers": "Buzz Feitshans and David Matalon",
      "studios": "Hollywood Pictures",
      "title": "Color of Night",
      "winner": 1,
      "year": 1994,
    },
    {
      "id": 283,
      "producers": "Rob Reiner and Alan Zweibel",
      "studios": "Columbia Pictures, Castle Rock Entertainment",
      "title": "North",
      "winner": 0,
      "year": 1994,
    },
    {
      "id": 284,
      "producers": "A. Kitman Ho, Julius R. Nasso and Steven Seagal",
      "studios": "Warner Bros.",
      "title": "On Deadly Ground",
      "winner": 0,
      "year": 1994,
    },
    {
      "id": 285,
      "producers": "Jerry Weintraub",
      "studios": "Warner Bros.",
      "title": "The Specialist",
      "winner": 0,
      "year": 1994,
    },
    {
      "id": 286,
      "producers": "Kevin Costner, Lawrence Kasdan and Jim Wilson",
      "studios": "Warner Bros.",
      "title": "Wyatt Earp",
      "winner": 0,
      "year": 1994,
    },
    {
      "id": 287,
      "producers": "Charles Evans and Alan Marshall",
      "studios": "MGM, United Artists",
      "title": "Showgirls",
      "winner": 1,
      "year": 1995,
    },
    {
      "id": 288,
      "producers": "Kathleen Kennedy and Sam Mercer",
      "studios": "Paramount Pictures",
      "title": "Congo",
      "winner": 0,
      "year": 1995,
    },
    {
      "id": 289,
      "producers": "Charles B. Wessler",
      "studios": "Touchstone Pictures",
      "title": "It's Pat",
      "winner": 0,
      "year": 1995,
    },
    {
      "id": 290,
      "producers": "Roland Joffé and Andrew G. Vajna",
      "studios": "Hollywood Pictures",
      "title": "The Scarlet Letter",
      "winner": 0,
      "year": 1995,
    },
    {
      "id": 291,
      "producers": "Kevin Costner, John Davis, Charles Gordon and Lawrence Gordon",
      "studios": "Universal Studios",
      "title": "Waterworld",
      "winner": 0,
      "year": 1995,
    },
    {
      "id": 292,
      "producers": "Andrew Bergman and Mike Lobell",
      "studios": "Columbia Pictures, Castle Rock Entertainment",
      "title": "Striptease",
      "winner": 1,
      "year": 1996,
    },
    {
      "id": 293,
      "producers": "Todd Moyer, Mike Richardson and Brad Wyman",
      "studios": "PolyGram Filmed Entertainment, Gramercy Pictures",
      "title": "Barb Wire",
      "winner": 0,
      "year": 1996,
    },
    {
      "id": 294,
      "producers": "Rosalie Swedlin",
      "studios": "Universal Studios",
      "title": "Ed",
      "winner": 0,
      "year": 1996,
    },
    {
      "id": 295,
      "producers": "Edward R. Pressman",
      "studios": "New Line Cinema",
      "title": "The Island of Dr. Moreau",
      "winner": 0,
      "year": 1996,
    },
    {
      "id": 296,
      "producers": "Leslie Belzberg",
      "studios": "New Line Cinema, Savoy Pictures",
      "title": "The Stupids",
      "winner": 0,
      "year": 1996,
    },
    {
      "id": 297,
      "producers": "Kevin Costner, Steve Tisch and Jim Wilson",
      "studios": "Warner Bros.",
      "title": "The Postman",
      "winner": 1,
      "year": 1997,
    },
    {
      "id": 298,
      "producers": "Verna Harrah, Carole Little and Leonard Rabinowitz",
      "studios": "Columbia Pictures",
      "title": "Anaconda",
      "winner": 0,
      "year": 1997,
    },
    {
      "id": 299,
      "producers": "Peter MacGregor-Scott",
      "studios": "Warner Bros.",
      "title": "Batman & Robin",
      "winner": 0,
      "year": 1997,
    },
    {
      "id": 300,
      "producers": "Julius R. Nasso and Steven Seagal",
      "studios": "Warner Bros.",
      "title": "Fire Down Below",
      "winner": 0,
      "year": 1997,
    },
    {
      "id": 301,
      "producers": "Jan de Bont, Steve Perry and Michael Peyser",
      "studios": "20th Century Fox",
      "title": "Speed 2: Cruise Control",
      "winner": 0,
      "year": 1997,
    },
    {
      "id": 302,
      "producers": "Ben Myron and Joe Eszterhas",
      "studios": "Hollywood Pictures",
      "title": "An Alan Smithee Film: Burn Hollywood Burn",
      "winner": 1,
      "year": 1998,
    },
    {
      "id": 303,
      "producers": "Michael Bay and Jerry Bruckheimer",
      "studios": "Touchstone Pictures",
      "title": "Armageddon",
      "winner": 0,
      "year": 1998,
    },
    {
      "id": 304,
      "producers": "Jerry Weintraub",
      "studios": "Warner Bros.",
      "title": "The Avengers",
      "winner": 0,
      "year": 1998,
    },
    {
      "id": 305,
      "producers": "Roland Emmerich and Dean Devlin",
      "studios": "TriStar Pictures",
      "title": "Godzilla",
      "winner": 0,
      "year": 1998,
    },
    {
      "id": 306,
      "producers": "Uri Fruchtan, Mark L. Rosen and Barnaby Thompson",
      "studios": "Columbia Pictures",
      "title": "Spice World",
      "winner": 0,
      "year": 1998,
    },
    {
      "id": 307,
      "producers": "Jon Peters and Barry Sonnenfeld",
      "studios": "Warner Bros.",
      "title": "Wild Wild West",
      "winner": 1,
      "year": 1999,
    },
    {
      "id": 308,
      "producers": "Sidney Ganis and Jack Giarraputo",
      "studios": "Columbia Pictures",
      "title": "Big Daddy",
      "winner": 0,
      "year": 1999,
    },
    {
      "id": 309,
      "producers": "Robin Cowie and Gregg Hale",
      "studios": "Artisan Entertainment",
      "title": "The Blair Witch Project",
      "winner": 0,
      "year": 1999,
    },
    {
      "id": 310,
      "producers": "Susan Arthur, Donna Roth and Colin Wilson",
      "studios": "DreamWorks",
      "title": "The Haunting",
      "winner": 0,
      "year": 1999,
    },
    {
      "id": 311,
      "producers": "Rick McCallum and George Lucas",
      "studios": "20th Century Fox",
      "title": "Star Wars: Episode I – The Phantom Menace",
      "winner": 0,
      "year": 1999,
    },
    {
      "id": 312,
      "producers": "Jonathan D. Krane, Elie Samaha and John Travolta",
      "studios": "Warner Bros., Franchise Pictures",
      "title": "Battlefield Earth",
      "winner": 1,
      "year": 2000,
    },
    {
      "id": 313,
      "producers": "Bill Carraro",
      "studios": "Artisan Entertainment",
      "title": "Book of Shadows: Blair Witch 2",
      "winner": 0,
      "year": 2000,
    },
    {
      "id": 314,
      "producers": "Bruce Cohen",
      "studios": "Universal Studios",
      "title": "The Flintstones in Viva Rock Vegas",
      "winner": 0,
      "year": 2000,
    },
    {
      "id": 315,
      "producers": "Jack Giarraputo and Robert Simonds",
      "studios": "New Line Cinema",
      "title": "Little Nicky",
      "winner": 0,
      "year": 2000,
    },
    {
      "id": 316,
      "producers": "Leslie Dixon, Linne Radmin and Tom Rosenberg",
      "studios": "Paramount Pictures",
      "title": "The Next Best Thing",
      "winner": 0,
      "year": 2000,
    },
    {
      "id": 317,
      "producers": "Larry Brezner, Howard Lapides and Lauren Lloyd",
      "studios": "20th Century Fox",
      "title": "Freddy Got Fingered",
      "winner": 1,
      "year": 2001,
    },
    {
      "id": 318,
      "producers": "Renny Harlin, Elie Samaha and Sylvester Stallone",
      "studios": "Warner Bros., Franchise Pictures",
      "title": "Driven",
      "winner": 0,
      "year": 2001,
    },
    {
      "id": 319,
      "producers": "Laurence Mark and E. Bennett Walsh",
      "studios": "20th Century Fox, Columbia Pictures",
      "title": "Glitter",
      "winner": 0,
      "year": 2001,
    },
    {
      "id": 320,
      "producers": "Michael Bay and Jerry Bruckheimer",
      "studios": "Touchstone Pictures",
      "title": "Pearl Harbor",
      "winner": 0,
      "year": 2001,
    },
    {
      "id": 321,
      "producers": "Demian Lichtenstein, Eric Manes, Elie Samaha, Richard Spero and Andrew Stevens",
      "studios": "Warner Bros., Franchise Pictures",
      "title": "3000 Miles to Graceland",
      "winner": 0,
      "year": 2001,
    },
    {
      "id": 322,
      "producers": "Matthew Vaughn",
      "studios": "Screen Gems",
      "title": "Swept Away",
      "winner": 1,
      "year": 2002,
    },
    {
      "id": 323,
      "producers": "Martin Bregman, Michael Scott Bregman and Louis A. Stroller",
      "studios": "Warner Bros.",
      "title": "The Adventures of Pluto Nash",
      "winner": 0,
      "year": 2002,
    },
    {
      "id": 324,
      "producers": "Ann Carli",
      "studios": "Paramount Pictures",
      "title": "Crossroads",
      "winner": 0,
      "year": 2002,
    },
    {
      "id": 325,
      "producers": "Gianluigi Braschi, Nicoletta Braschi and Elda Ferri",
      "studios": "Miramax Films",
      "title": "Pinocchio",
      "winner": 0,
      "year": 2002,
    },
    {
      "id": 326,
      "producers": "Rick McCallum and George Lucas",
      "studios": "20th Century Fox",
      "title": "Star Wars: Episode II – Attack of the Clones",
      "winner": 0,
      "year": 2002,
    },
    {
      "id": 327,
      "producers": "Martin Brest and Casey Silver",
      "studios": "Columbia Pictures, Revolution Studios",
      "title": "Gigli",
      "winner": 1,
      "year": 2003,
    },
    {
      "id": 328,
      "producers": "Brian Grazer",
      "studios": "Universal Studios, DreamWorks",
      "title": "The Cat in the Hat",
      "winner": 0,
      "year": 2003,
    },
    {
      "id": 329,
      "producers": "Drew Barrymore, Leonard Goldberg and Nancy Juvonen",
      "studios": "Columbia Pictures",
      "title": "Charlie's Angels: Full Throttle",
      "winner": 0,
      "year": 2003,
    },
    {
      "id": 330,
      "producers": "John Steven Agoglia",
      "studios": "20th Century Fox",
      "title": "From Justin to Kelly",
      "winner": 0,
      "year": 2003,
    },
    {
      "id": 331,
      "producers": "Mary-Ellis Bunim, Jonathan Murray, Jamie Schutz and Rick de Oliveira",
      "studios": "New Line Cinema",
      "title": "The Real Cancun",
      "winner": 0,
      "year": 2003,
    },
    {
      "id": 332,
      "producers": "Denise Di Novi and Edward McDonnell",
      "studios": "Warner Bros.",
      "title": "Catwoman",
      "winner": 1,
      "year": 2004,
    },
    {
      "id": 333,
      "producers": "Moritz Borman, Jon Kilik, Thomas Schuhly and Iain Smith",
      "studios": "Warner Bros.",
      "title": "Alexander",
      "winner": 0,
      "year": 2004,
    },
    {
      "id": 334,
      "producers": "Steven Paul",
      "studios": "Triumph Films",
      "title": "Superbabies: Baby Geniuses 2",
      "winner": 0,
      "year": 2004,
    },
    {
      "id": 335,
      "producers": "Betty Thomas and Jenno Topping",
      "studios": "DreamWorks",
      "title": "Surviving Christmas",
      "winner": 0,
      "year": 2004,
    },
    {
      "id": 336,
      "producers": "Rick Alvarez, Lee R. Mayes, Keenen Ivory Wayans, Marlon Wayans and Shawn Wayans",
      "studios": "Columbia Pictures, Revolution Studios",
      "title": "White Chicks",
      "winner": 0,
      "year": 2004,
    },
    {
      "id": 337,
      "producers": "John Mallory Asher, BJ Davis, Rod Hamilton, Kimberley Kates, Michael Manasseri, Jenny McCarthy and Trent Walford",
      "studios": "First Look Pictures",
      "title": "Dirty Love",
      "winner": 1,
      "year": 2005,
    },
    {
      "id": 338,
      "producers": "Adam Sandler and Rob Schneider",
      "studios": "Columbia Pictures",
      "title": "Deuce Bigalow: European Gigolo",
      "winner": 0,
      "year": 2005,
    },
    {
      "id": 339,
      "producers": "Bill Gerber",
      "studios": "Warner Bros., Village Roadshow",
      "title": "The Dukes of Hazzard",
      "winner": 0,
      "year": 2005,
    },
    {
      "id": 340,
      "producers": "Susan Levin, Joel Silver and Robert Zemeckis",
      "studios": "Warner Bros., Village Roadshow",
      "title": "House of Wax",
      "winner": 0,
      "year": 2005,
    },
    {
      "id": 341,
      "producers": "Erica Huggins and Scott Kroopf",
      "studios": "New Line Cinema",
      "title": "Son of the Mask",
      "winner": 0,
      "year": 2005,
    },
    {
      "id": 342,
      "producers": "Mario Kassar, Joel B. Michaels and Andrew G. Vajna",
      "studios": "MGM, C2 Pictures",
      "title": "Basic Instinct 2",
      "winner": 1,
      "year": 2006,
    },
    {
      "id": 343,
      "producers": "Uwe Boll, Dan Clarke and Wolfgang Herrold",
      "studios": "Romar Entertainment",
      "title": "BloodRayne",
      "winner": 0,
      "year": 2006,
    },
    {
      "id": 344,
      "producers": "Sam Mercer, Jose L. Rodriguez and M. Night Shyamalan",
      "studios": "Warner Bros.",
      "title": "Lady in the Water",
      "winner": 0,
      "year": 2006,
    },
    {
      "id": 345,
      "producers": "Rick Alvares, Lee Mays, Marlon Wayans and Shawn Wayans",
      "studios": "Columbia Pictures, Revolution Studios",
      "title": "Little Man",
      "winner": 0,
      "year": 2006,
    },
    {
      "id": 346,
      "producers": "Nicolas Cage, Randall Emmett, Norm Golightly, Avi Lerner and Joanne Sellar",
      "studios": "Warner Bros.",
      "title": "The Wicker Man",
      "winner": 0,
      "year": 2006,
    },
    {
      "id": 347,
      "producers": "David Grace and Frank Mancuso Jr.",
      "studios": "TriStar Pictures",
      "title": "I Know Who Killed Me",
      "winner": 0,
      "year": 2007,
    },
    {
      "id": 348,
      "producers": "Avi Arad, Isaac Larian and Steven Paul",
      "studios": "Lionsgate",
      "title": "Bratz",
      "winner": 0,
      "year": 2007,
    },
    {
      "id": 349,
      "producers": "Matt Berenson, John Davis and Wyck Godfrey",
      "studios": "TriStar Pictures, Revolution Studios",
      "title": "Daddy Day Camp",
      "winner": 0,
      "year": 2007,
    },
    {
      "id": 350,
      "producers": "Adam Sandler and Tom Shadyac",
      "studios": "Universal Studios",
      "title": "I Now Pronounce You Chuck & Larry",
      "winner": 0,
      "year": 2007,
    },
    {
      "id": 351,
      "producers": "John Davis, Eddie Murphy and Michael Tollin",
      "studios": "DreamWorks",
      "title": "Norbit",
      "winner": 0,
      "year": 2007,
    },
    {
      "id": 352,
      "producers": "Gary Barber, Michael DeLuca and Mike Myers",
      "studios": "Paramount Pictures",
      "title": "The Love Guru",
      "winner": 1,
      "year": 2008,
    },
    {
      "id": 353,
      "producers": "Jason Friedberg, Peter Safran and Aaron Seltzer",
      "studios": "Lionsgate, 20th Century Fox",
      "title": "Disaster Movie and Meet the Spartans",
      "winner": 0,
      "year": 2008,
    },
    {
      "id": 354,
      "producers": "Barry Mendel, Sam Mercer and M. Night Shyamalan",
      "studios": "20th Century Fox",
      "title": "The Happening",
      "winner": 0,
      "year": 2008,
    },
    {
      "id": 355,
      "producers": "Hadeel Reda",
      "studios": "Regent Releasing",
      "title": "The Hottie & the Nottie",
      "winner": 0,
      "year": 2008,
    },
    {
      "id": 356,
      "producers": "Uwe Boll, Dan Clarke, Wolfgang Herrold and Shawn Williamson",
      "studios": "Boll KG, Brightlight Pictures",
      "title": "In the Name of the King",
      "winner": 0,
      "year": 2008,
    },
    {
      "id": 357,
      "producers": "Lorenzo di Bonaventura, Ian Bryce, Tom DeSanto and Don Murphy",
      "studios": "Paramount Pictures, DreamWorks, Hasbro",
      "title": "Transformers: Revenge of the Fallen",
      "winner": 1,
      "year": 2009,
    },
    {
      "id": 358,
      "producers": "Sandra Bullock and Mary McLaglen",
      "studios": "20th Century Fox",
      "title": "All About Steve",
      "winner": 0,
      "year": 2009,
    },
    {
      "id": 359,
      "producers": "Lorenzo di Bonaventura, Bob Ducsay and Brian Goldner",
      "studios": "Paramount Pictures, Hasbro",
      "title": "G.I. Joe: The Rise of Cobra",
      "winner": 0,
      "year": 2009,
    },
    {
      "id": 360,
      "producers": "Sid and Marty Krofft and Jimmy Miller",
      "studios": "Universal Studios",
      "title": "Land of the Lost",
      "winner": 0,
      "year": 2009,
    },
    {
      "id": 361,
      "producers": "Peter Abrams, Robert Levy and Andrew Panay",
      "studios": "Walt Disney Pictures",
      "title": "Old Dogs",
      "winner": 0,
      "year": 2009,
    },
    {
      "id": 362,
      "producers": "Frank Marshall, Kathleen Kennedy, Sam Mercer and M. Night Shyamalan",
      "studios": "Paramount Pictures, Nickelodeon Movies",
      "title": "The Last Airbender",
      "winner": 1,
      "year": 2010,
    },
    {
      "id": 363,
      "producers": "Neal H. Moritz",
      "studios": "Columbia Pictures",
      "title": "The Bounty Hunter",
      "winner": 0,
      "year": 2010,
    },
    {
      "id": 364,
      "producers": "Michael Patrick King, John Melfi, Sarah Jessica Parker and Darren Star",
      "studios": "New Line Cinema, HBO Films, Village Roadshow Pictures",
      "title": "Sex and the City 2",
      "winner": 0,
      "year": 2010,
    },
    {
      "id": 365,
      "producers": "Wyck Godfrey and Karen Rosenfelt",
      "studios": "Summit Entertainment",
      "title": "The Twilight Saga: Eclipse",
      "winner": 0,
      "year": 2010,
    },
    {
      "id": 366,
      "producers": "Jason Friedberg, Peter Safran and Aaron Seltzer",
      "studios": "20th Century Fox",
      "title": "Vampires Suck",
      "winner": 0,
      "year": 2010,
    },
    {
      "id": 367,
      "producers": "Todd Garner, Jack Giarraputo and Adam Sandler",
      "studios": "Columbia Pictures",
      "title": "Jack and Jill",
      "winner": 1,
      "year": 2011,
    },
    {
      "id": 368,
      "producers": "Barry Bernardi, Allen Covert, David Dorfman and Jack Giarraputo",
      "studios": "Columbia Pictures",
      "title": "Bucky Larson: Born to Be a Star",
      "winner": 0,
      "year": 2011,
    },
    {
      "id": 369,
      "producers": "Mike Karz, Garry Marshall and Wayne Allan Rice",
      "studios": "Warner Bros., New Line Cinema",
      "title": "New Year's Eve",
      "winner": 0,
      "year": 2011,
    },
    {
      "id": 370,
      "producers": "Lorenzo di Bonaventura, Ian Bryce, Tom DeSanto and Don Murphy",
      "studios": "Paramount Pictures",
      "title": "Transformers: Dark of the Moon",
      "winner": 0,
      "year": 2011,
    },
    {
      "id": 371,
      "producers": "Wyck Godfrey, Stephenie Meyer and Karen Rosenfelt",
      "studios": "Summit Entertainment",
      "title": "The Twilight Saga: Breaking Dawn – Part 1",
      "winner": 0,
      "year": 2011,
    },
    {
      "id": 372,
      "producers": "Wyck Godfrey, Stephenie Meyer and Karen Rosenfelt",
      "studios": "Summit Entertainment",
      "title": "The Twilight Saga: Breaking Dawn – Part 2",
      "winner": 1,
      "year": 2012,
    },
    {
      "id": 373,
      "producers": "Sarah Aubrey, Peter Berg, Brian Goldner, Duncan Henderson, Bennett Schneir and Scott Stuber",
      "studios": "Universal Studios",
      "title": "Battleship",
      "winner": 0,
      "year": 2012,
    },
    {
      "id": 374,
      "producers": "Gayle Dickie, Kenn Viselman",
      "studios": "Lionsgate Films, Romar Entertainment, Kenn Viselman Presents",
      "title": "The Oogieloves in the Big Balloon Adventure",
      "winner": 0,
      "year": 2012,
    },
    {
      "id": 375,
      "producers": "Allen Covert, Jack Giarraputo, Heather Parry and Adam Sandler",
      "studios": "Columbia Pictures",
      "title": "That's My Boy",
      "winner": 0,
      "year": 2012,
    },
    {
      "id": 376,
      "producers": "Nicolas Cage, Alain Chabat, Stephanie Danan, Norman Golightly, Brian Robbinsand Sharla Sumpter Bridgett",
      "studios": "Paramount Pictures, DreamWorks",
      "title": "A Thousand Words",
      "winner": 0,
      "year": 2012,
    },
    {
      "id": 377,
      "producers": "Peter Farrelly, Ryan Kavanaugh, John Penotti and Charles B. Wessler",
      "studios": "Relativity Media",
      "title": "Movie 43",
      "winner": 1,
      "year": 2013,
    },
    {
      "id": 378,
      "producers": "James Lassiter, Caleeb Pinkett, Jada Pinkett Smith, M. Night Shyamalan, Will Smith and Jaden Smith",
      "studios": "Columbia Pictures",
      "title": "After Earth",
      "winner": 0,
      "year": 2013,
    },
    {
      "id": 379,
      "producers": "Jack Giarraputo and Adam Sandler",
      "studios": "Columbia Pictures",
      "title": "Grown Ups 2",
      "winner": 0,
      "year": 2013,
    },
    {
      "id": 380,
      "producers": "Jerry Bruckheimer and Gore Verbinski",
      "studios": "Walt Disney Pictures",
      "title": "The Lone Ranger",
      "winner": 0,
      "year": 2013,
    },
    {
      "id": 381,
      "producers": "Ozzie Areu, Matt Moore and Tyler Perry",
      "studios": "Lionsgate",
      "title": "A Madea Christmas",
      "winner": 0,
      "year": 2013,
    },
    {
      "id": 382,
      "producers": "Darren Doane, Raphi Henley, Amanda Rosser and David Shannon",
      "studios": "Samuel Goldwyn Films",
      "title": "Saving Christmas",
      "winner": 1,
      "year": 2014,
    },
    {
      "id": 383,
      "producers": "Michael Walker and Paul LaLonde",
      "studios": "Freestyle Releasing, Entertainment One",
      "title": "Left Behind",
      "winner": 0,
      "year": 2014,
    },
    {
      "id": 384,
      "producers": "Boaz Davidson, Renny Harlin, Danny Lerner and Les Weldon",
      "studios": "Summit Entertainment",
      "title": "The Legend of Hercules",
      "winner": 0,
      "year": 2014,
    },
    {
      "id": 385,
      "producers": "Michael Bay, Ian Bryce, Andrew Form, Bradley Fuller, Scott Mednick and Galen Walker",
      "studios": "Paramount Pictures, Nickelodeon Movies, Platinum Dunes",
      "title": "Teenage Mutant Ninja Turtles",
      "winner": 0,
      "year": 2014,
    },
    {
      "id": 386,
      "producers": "Ian Bryce, Tom DeSanto, Lorenzo di Bonaventura and Don Murphy",
      "studios": "Paramount Pictures",
      "title": "Transformers: Age of Extinction",
      "winner": 0,
      "year": 2014,
    },
    {
      "id": 387,
      "producers": "Simon Kinberg, Matthew Vaughn, Hutch Parker, Robert Kulzer and Gregory Goodman",
      "studios": "20th Century Fox",
      "title": "Fantastic Four",
      "winner": 1,
      "year": 2015,
    },
    {
      "id": 388,
      "producers": "Michael De Luca, Dana Brunetti and E. L. James",
      "studios": "Universal Pictures, Focus Features",
      "title": "Fifty Shades of Grey",
      "winner": 1,
      "year": 2015,
    },
    {
      "id": 389,
      "producers": "Grant Hill and The Wachowskis",
      "studios": "Warner Bros.",
      "title": "Jupiter Ascending",
      "winner": 0,
      "year": 2015,
    },
    {
      "id": 390,
      "producers": "Todd Garner, Kevin James and Adam Sandler",
      "studios": "Columbia Pictures",
      "title": "Paul Blart: Mall Cop 2",
      "winner": 0,
      "year": 2015,
    },
    {
      "id": 391,
      "producers": "Adam Sandler, Chris Columbus, Mark Radcliffe and Allen Covert",
      "studios": "Columbia Pictures",
      "title": "Pixels",
      "winner": 0,
      "year": 2015,
    },
    {
      "id": 392,
      "producers": "Gerald R. Molen",
      "studios": "Quality Flix",
      "title": "Hillary's America: The Secret History of the Democratic Party",
      "winner": 1,
      "year": 2016,
    },
    {
      "id": 393,
      "producers": "Charles Roven and Deborah Snyder",
      "studios": "Warner Bros.",
      "title": "Batman v Superman: Dawn of Justice",
      "winner": 0,
      "year": 2016,
    },
    {
      "id": 394,
      "producers": "Bill Block, Michael Simkin, Jason Barrett and Barry Josephson",
      "studios": "Lionsgate",
      "title": "Dirty Grandpa",
      "winner": 0,
      "year": 2016,
    },
    {
      "id": 395,
      "producers": "Basil Iwanyk and Alex Proyas",
      "studios": "Summit Entertainment",
      "title": "Gods of Egypt",
      "winner": 0,
      "year": 2016,
    },
    {
      "id": 396,
      "producers": "Dean Devlin, Harald Kloser and Roland Emmerich",
      "studios": "20th Century Fox",
      "title": "Independence Day: Resurgence",
      "winner": 0,
      "year": 2016,
    },
    {
      "id": 397,
      "producers": "Stuart Cornfeld, Scott Rudin, Ben Stiller and Clayton Townsend",
      "studios": "Paramount Pictures",
      "title": "Zoolander 2",
      "winner": 0,
      "year": 2016,
    },
    {
      "id": 398,
      "producers": "Michelle Raimo Kouyate",
      "studios": "Columbia Pictures",
      "title": "The Emoji Movie",
      "winner": 1,
      "year": 2017,
    },
    {
      "id": 399,
      "producers": "Ivan Reitman, Michael Berk, Douglas Schwartz, Gregory J. Bonann and Beau Flynn",
      "studios": "Paramount Pictures",
      "title": "Baywatch",
      "winner": 0,
      "year": 2017,
    },
    {
      "id": 400,
      "producers": "Michael De Luca, E. L. James, Dana Brunetti and Marcus Viscidi",
      "studios": "Universal Pictures",
      "title": "Fifty Shades Darker",
      "winner": 0,
      "year": 2017,
    },
    {
      "id": 401,
      "producers": "Alex Kurtzman, Chris Morgan, Sean Daniel and Sarah Bradshaw",
      "studios": "Universal Pictures",
      "title": "The Mummy",
      "winner": 0,
      "year": 2017,
    },
    {
      "id": 402,
      "producers": "Don Murphy, Tom DeSanto, Lorenzo di Bonaventura and Ian Bryce",
      "studios": "Paramount Pictures",
      "title": "Transformers: The Last Knight",
      "winner": 0,
      "year": 2017,
    },
    {
      "id": 403,
      "producers": "Will Ferrell, Adam McKay, Jimmy Miller and Clayton Townsend",
      "studios": "Columbia Pictures",
      "title": "Holmes & Watson",
      "winner": 1,
      "year": 2018,
    },
    {
      "id": 404,
      "producers": "Randall Emmett, Marc Fiore, Michael Froch and George Furla",
      "studios": "Vertical Entertainment",
      "title": "Gotti",
      "winner": 0,
      "year": 2018,
    },
    {
      "id": 405,
      "producers": "Ben Falcone, Jeffrey Hayes, Brian Henson and Melissa McCarthy",
      "studios": "STX",
      "title": "The Happytime Murders",
      "winner": 0,
      "year": 2018,
    },
    {
      "id": 406,
      "producers": "Jennifer Davisson and Leonardo DiCaprio",
      "studios": "Summit Entertainment",
      "title": "Robin Hood",
      "winner": 0,
      "year": 2018,
    },
    {
      "id": 407,
      "producers": "Tim McGahan and Brett Tomberlin",
      "studios": "Lionsgate",
      "title": "Winchester",
      "winner": 0,
      "year": 2018,
    },
    {
      "id": 408,
      "producers": "Debra Hayward, Tim Bevan, Eric Fellner, and Tom Hooper",
      "studios": "Universal Pictures",
      "title": "Cats",
      "winner": 1,
      "year": 2019,
    },
    {
      "id": 409,
      "producers": "Daniel Grodnik, Oscar Generale, and Bill Kenwright",
      "studios": "Quiver Distribution",
      "title": "The Fanatic",
      "winner": 0,
      "year": 2019,
    },
    {
      "id": 410,
      "producers": "Lucas Jarach, Daniel Farrands, and Eric Brenner",
      "studios": "Saban Films",
      "title": "The Haunting of Sharon Tate",
      "winner": 0,
      "year": 2019,
    },
    {
      "id": 411,
      "producers": "Ozzie Areu, Will Areu, and Mark E. Swinton",
      "studios": "Lionsgate",
      "title": "A Madea Family Funeral",
      "winner": 0,
      "year": 2019,
    },
    {
      "id": 412,
      "producers": "Avi Lerner, Kevin King Templeton, Yariv Lerner, and Les Weldon",
      "studios": "Lionsgate",
      "title": "Rambo: Last Blood",
      "winner": 0,
      "year": 2019,
    },
  ],
  "error": null,
  "message": "Movies found",
  "success": true,
}
`;

exports[`Test api routes Should return 400 for an invalid movie ID 1`] = `
{
  "data": null,
  "error": null,
  "message": "Invalid movie ID",
  "success": false,
}
`;

exports[`Test api routes Should return 404 for a non-existent movie 1`] = `
{
  "data": null,
  "error": null,
  "message": "Movie not found",
  "success": false,
}
`;
